fix z-index to make menu visible

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -56,7 +56,7 @@
   opacity: 1;
   transform: translateY(0);
   visibility: visible;
-  z-index: 2;
+  z-index: 3;
 }
 
 .menu__item-link {
